src/objects/AccountSurvey__c.object
<CustomObject>
    <fields>
        <fullName>Account_External_Id_Aperity__c</fullName>
        <externalId>true</externalId>
        <label>Account External Id Aperity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Surveys</relationshipLabel>
        <relationshipName>AccountSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompletedBy__c</fullName>
        <inlineHelpText>Person who completed the GoSpotCheck Survey.</inlineHelpText>
        <label>Completed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateCompleted__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Account Surveys</relationshipLabel>
        <relationshipName>AccountSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScoreIndicator__c</fullName>
        <formula>IMAGE( 
IF(ScoreValue__c=0, &quot;/img/samples/stars_000.gif&quot;, 
IF(ScoreValue__c&lt;0.20, &quot;/img/samples/stars_100.gif&quot;, 
IF(ScoreValue__c&lt;0.40, &quot;/img/samples/stars_200.gif&quot;, 
IF(ScoreValue__c&lt;0.60, &quot;/img/samples/stars_300.gif&quot;, 
IF(ScoreValue__c&lt;0.80, &quot;/img/samples/stars_400.gif&quot;,
IF(ScoreValue__c &lt;= 1, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;
)))))), 
&quot;&quot;)</formula>
        <label>Score Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScoreValue__c</fullName>
        <description>A measure of how well a store complies with the objectives of the survey</description>
        <inlineHelpText>This is a percentage which measures how well a store complies with the objectives of the survey.</inlineHelpText>
        <label>Score Value (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>StoreID__c</fullName>
        <label>Store ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyID__c</fullName>
        <externalId>true</externalId>
        <label>Survey ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveySource__c</fullName>
        <label>Survey Source</label>
        <picklist>
            <picklistValues>
                <fullName>GSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Account Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>